turtleart.polygon360.Polygon360.scala.error
Erreur de compilation :
Polygon360:2: error: overloaded method value setPos with alternatives:
  (x$1: Int,x$2: Double)Unit <and>
  (x$1: Double,x$2: Int)Unit <and>
  (x$1: Int,x$2: Int)Unit <and>
  (x$1: Double,x$2: Double)Unit
 cannot be applied to ()
  setPos()
  ^